--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Bootstrap Template Atlas</title>
+    <title>Hokkolo</title>
     <meta name="description" content="Free bootstrap template Atlas">
     <link rel="icon" href="img/favicon.png" sizes="32x32" type="image/png">
     <!-- custom.css -->
@@ -27,13 +27,13 @@
                         <img src="img/logo.png" alt="logo">
                     </div>
                     <div class="col-6 align-self-center text-right">
-                        <a href="#" class="text-white lead">Get Early Access</a>
+                        <a href="#" class="text-white lead">Experience the best</a>
                     </div>
                 </div>
             </header>
             <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5">
-            	A New Way<br>
-            	To Start Business
+            	Stuck with outdated cloud solutions<br>
+            	Switch to smart cloud and Infra solutions!
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
                 Lorem ipsum dolor sit amet, id nec enim autem oblique, ei dico mentitum duo.
