--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
                 </div>
             </header>
             <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5">
-            	Stuck with outdated cloud solutions<br>
-            	Switch to smart cloud and Infra solutions!
+            	Stuck with outdated cloud solutions?<br>
+            	Switch to smart cloud and Infrastructure solutions with us!
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
-                Lorem ipsum dolor sit amet, id nec enim autem oblique, ei dico mentitum duo.
-                <br> Illum iusto laoreet his te. Lorem partiendo mel ex. Ad vitae admodum voluptatum per.
+                Automate your application with DevOps solutions.
+                <br> Migrate to Cloud. We support all Cloud providers. 
+                <br> Certified Professionls, providing best in class solutions for your application. 
             </p>
             <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Started</a>
         </div>
