--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 </div>
             </header>
             <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5">
-            	Stuck with outdated cloud solutions?<br>
+            	Outdated cloud solutions?<br>
             	Switch to smart cloud and Infrastructure solutions with us!
             </h1>
             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4">
-                Automate your application with DevOps solutions.
-                <br> Migrate to Cloud. We support all Cloud providers. 
-                <br> Certified Professionls, providing best in class solutions for your application. 
+                Certified Professionls, providing best in class solutions for your application.
+                <br> Migrate to Cloud. We support all Cloud providers.
+                <br> Automate your application deployments with DevOps solutions. 
             </p>
             <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Started</a>
         </div>
@@ -174,7 +174,7 @@
                         <br> augue disputando in vim. Erat fugit sit at, ius lorem.
                     </p>
                     <ul class="list-unstyled">
-                        <li>Email : company_email@com</li>
+                        <li>Email : god@Hokkolo.one</li>
                         <li>Phone : 361-688-5824</li>
                         <li>Address : 4826 White Avenue, Corpus Christi, Texas</li>
                     </ul>
@@ -207,7 +207,7 @@
         <div class="container">
             <div class="row justify-content-between">
             	<div class="col-md-6 text-white align-self-center text-center text-md-left my-2">
-                    Copyright © 2018 Chen, Yi-Ya.
+                    Copyright © 2023 Hokkolo.
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-right my-2" id="social-media">
                     <a href="#" class="d-inline-block text-center ml-2">
